src/objects/Close_Request__c.object
<CustomObject>
    <description>Stores a record for every request made to close an open day in the system. - Tied to center open day object</description>
    <fields>
        <fullName>Center_Open_Day__c</fullName>
        <description>The Center Open day this request is related to</description>
        <label>Center Open Day</label>
        <referenceTo>Center_Open_Day__c</referenceTo>
        <relationshipLabel>Close Requests</relationshipLabel>
        <relationshipName>Close_Requests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Close_Notes__c</fullName>
        <label>Close Notes</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Reason__c</fullName>
        <label>Close Reason</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Denied_Reason__c</fullName>
        <description>Reason a close request was marked as denied</description>
        <label>Denied Reason</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handled_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User who signs of on the request</description>
        <label>Handled By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Close_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Handled_Status__c</fullName>
        <label>Handled Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Handled_Time__c</fullName>
        <description>Time the request was processed</description>
        <label>Handled Time</label>
        <type>DateTime</type>
    </fields>
    <label>Close Request</label>
    <nameField>
        <displayFormat>CR-{0000}</displayFormat>
        <label>Close Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Close Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>